# Secure-system-development

./: README.md
LR1_Kalashnikova/: CMakeLists.txt  credentials.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protector.cpp  readme.md
